<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWelcome"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="15dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/msg_home"
            android:gravity="center"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_marginTop="15dp"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:padding="10dp"
            android:text="@string/lbl_welcome"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/tvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:padding="10dp"
            android:textColor="@android:color/white"/>

    <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/btn_logout"
            android:gravity="center"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_marginTop="15dp"/>
</LinearLayout>