<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWelcome"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:padding="15dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/msg_login"
            android:gravity="center"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_marginTop="15dp"/>

    <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="text"
            android:hint="@string/hint_username"/>

    <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>

    <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/msg_login"
            android:gravity="center"
            android:textSize="24sp"
            android:padding="10dp"
            android:layout_marginTop="15dp"/>
</LinearLayout>